# dota-match-found-notifier

./: .gitignore  README.md  pyi_entry.py  pyproject.toml
.github/workflows/: build.yml  ci.yml
scripts/: capture_console.py  check_capture.py  diag_frames.py  netcon_probe.py  verify_console_detect.py
src/d2aa/: __init__.py  __main__.py  app.py  cli.py  config.py  menu.py  paths.py  setup_console.py  ui.py
src/d2aa/capture/: __init__.py  mss_backend.py  pipewire_backend.py
src/d2aa/detect/: __init__.py  base.py  console.py  pixel.py
src/d2aa/gui/: wizard.py
src/d2aa/notify/: __init__.py  ntfy.py
src/d2kit/: __init__.py  __main__.py  app.py  cli.py  config.py  menu.py  paths.py  setup_console.py  ui.py
src/d2kit/capture/: base.py  mss_backend.py  pipewire_backend.py
src/d2kit/detect/: __init__.py  console.py  pixel.py
src/d2kit/gui/: __init__.py  wizard.py
src/d2kit/notify/: base.py  ntfy.py
src/d2kit/stats/: __init__.py  benchmark.py  cache.py  cohort.py  compare.py  divergence.py  flow.py  render.py  similarity.py  timings.py
src/d2kit/stats/stratz/: __init__.py  client.py  constants.py  queries.py
tests/: test_benchmark.py  test_capture_factory.py  test_config.py  test_console_detector.py  test_constants.py  test_divergence.py  test_ntfy.py  test_pixel_detector.py  test_similarity.py  test_stratz_client.py  test_timings.py
